src/index.css
/* Import */
@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap");

/* Custom Properties */
:root {
  --color-primary-blue: hsl(238, 40%, 52%);
  --color-primary-red: hsl(358, 79%, 66%);
  --color-soft-blue: hsl(239, 57%, 85%);
  --color-soft-red: hsl(357, 100%, 86%);
  --color-neutral-blue: hsl(212, 24%, 26%);
  --color-neutral-gray: hsl(211, 10%, 45%);
  --color-soft-gray: hsl(223, 19%, 93%);
  --color-soft-white: hsl(228, 33%, 97%);
  --color-white: hsl(0, 0%, 100%);
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

/* Typography */
html {
  font-size: 62.5%;
}

body {
  font-size: 1.7rem;
  background-color: var(--color-soft-white);
  color: var(--color-neutral-gray);
  margin: 0;
  letter-spacing: 0.4px;
  line-height: 2.2rem;
  font-family: "Rubik", sans-serif;
  font-weight: 400;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@media screen and (min-width: 1000px) {
  body {
    font-size: 1.5rem;
  }
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* Box */
.box {
  background-color: var(--color-white);
  border-radius: 10px;
  margin: 2rem;
  padding: 1.3rem;
}

/* Comment */
.comment {
  align-items: center;
  display: grid;
  grid-column-gap: 0px;
  grid-row-gap: 0rem;
  grid-template-columns: 0.5fr 0.5fr 0.8fr 1fr;
  grid-template-rows: 0.5fr 1fr 0.5fr;
}

.comment-info-1 {
  justify-self: center;
  grid-area: 1 / 1 / 2 / 2;
}
.comment-info-2 {
  justify-self: center;
  grid-area: 1 / 2 / 2 / 3;
}
.comment-info-3 {
  justify-self: center;
  grid-area: 1 / 3 / 2 / 4;
}
.comment-info-4 {
  grid-area: 1 / 4 / 2 / 5;
  justify-self: end;
}
.comment-content {
  grid-area: 2 / 1 / 3 / 5;
}
.comment-action-1 {
  grid-area: 3 / 1 / 4 / 3;
}
.comment-action-2 {
  justify-self: end;
  grid-area: 3 / 3 / 4 / 4;
}
.comment-action-3 {
  justify-self: end;
  grid-area: 3 / 4 / 4 / 5;
}

.comment--reply {
  margin-left: 5rem;
  box-shadow: -1rem 0rem 0.2rem 0rem var(--color-soft-gray);
}

.comment__avatar {
  text-align: left;
}
.comment__avatar img {
  width: 32px;
}
.comment-original-poster {
  font-weight: 700;
  color: var(--color-primary-blue);
}
.comment__username {
  font-weight: 700;
}
.comment__currentuser {
  background-color: var(--color-primary-blue);
  border-radius: 5px;
  color: var(--color-white);
  font-weight: 400;
  padding: 0 1rem;
}
@media screen and (min-width: 1000px) {
  .comment {
    align-items: baseline;
    display: grid;
    justify-content: space-between;
    grid-template-columns: 0.5fr repeat(6, 1fr);
    grid-template-rows: 0.3fr 0.7fr;
    grid-column-gap: 0rem;
    grid-row-gap: 0px;
    padding: 1rem 2rem;
    margin: 2rem 25rem;
  }
  .comment-info-1 {
    grid-area: 1 / 2 / 2 / 3;
    justify-self: center;
  }
  .comment-info-2 {
    align-self: center;
    grid-area: 1 / 3 / 2 / 4;
  }
  .comment-info-3 {
    align-self: center;
    grid-area: 1 / 4 / 2 / 5;
  }
  .comment-info-4 {
    align-self: center;
    grid-area: 1 / 5 / 2 / 6;
  }
  .comment-content {
    align-self: flex-start;
    grid-area: 2 / 2 / 3 / 8;
  }
  .comment-action-1 {
    grid-area: 1 / 1 / 3 / 2;
  }
  .comment-action-2 {
    align-self: center;

    grid-area: 1 / 6 / 2 / 7;
  }
  .comment-action-3 {
    align-self: center;

    grid-area: 1 / 7 / 2 / 8;
  }

  .comment--reply {
    margin-left: 30rem;
  }
}

/* Reply */
.reply {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 1fr 0.5fr;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  padding: 1rem;
  align-items: center;
}

.reply-content {
  grid-area: 1 / 1 / 2 / 3;
}
.reply-info {
  grid-area: 2 / 1 / 3 / 2;
}
.reply-action {
  justify-self: end;
  grid-area: 2 / 2 / 3 / 3;
}
@media screen and (min-width: 1000px) {
  .reply {
    margin: 2rem 25rem;
  }
}
/* Input */
.input {
  border-radius: 10px;
  border: 1px solid var(--color-soft-gray);
  color: var(--color-neutral-gray);
  font-family: inherit;
  font-size: 1.7rem;
  resize: none;
  height: 8rem;
  width: 100%;
  padding: 1rem;
}

.update {
  height: 14rem;
}

/* Button */
button {
  all: unset;
  cursor: pointer;
  margin: 0rem;
}
.btn {
  background-color: var(--color-soft-gray);
  border-radius: 10px;
  display: grid;
  grid-column-gap: 0px;
  grid-row-gap: 0px;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  justify-items: center;
  width: 10rem;
}
.btn-plus {
  grid-area: 1 / 1 / 2 / 2;
}
.btn-score {
  grid-area: 1 / 2 / 2 / 3;
}
.btn-minus {
  grid-area: 1 / 3 / 2 / 4;
}
.btn-text {
  color: var(--color-primary-blue);
  font-weight: 700;
  padding: 1rem;
}
.btn-send {
  border-radius: 10px;
  background-color: var(--color-primary-blue);
  color: var(--color-white);
  font-weight: 500;
  text-transform: uppercase;
  text-align: center;
  height: 50px;
  width: 10rem;
}

.btn-send:hover {
  background-color: var(--color-soft-blue);
}

@media screen and (min-width: 1000px) {
  .btn {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3, 1fr);
    width: 4rem;
  }
  .btn-plus {
    grid-area: 1 / 1 / 2 / 2;
  }
  .btn-score {
    grid-area: 2 / 1 / 3 / 2;
  }
  .btn-minus {
    grid-area: 3 / 1 / 4 / 2;
  }
}

/* Actions */
.action {
  font-weight: 700;
}
.action__delete {
  color: var(--color-primary-red);
  fill: var(--color-primary-red);
}
.action__reply {
  color: var(--color-primary-blue);
  fill: var(--color-primary-blue);
}

.action__delete:hover {
  color: var(--color-soft-red);
  fill: var(--color-soft-red);
}

.action__reply:hover {
  color: var(--color-soft-blue);
  fill: var(--color-soft-blue);
}

/* Modal */
.modal {
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
}

.modal-container {
  width: 90vw;
  height: fit-content;
  border-radius: 12px;
  background-color: white;
  display: flex;
  flex-direction: column;
  padding: 5rem 2rem;
  justify-content: center;
}

.header {
  color: var(--color-neutral-blue);
  font-size: 1.4rem;
  text-align: left;
}
.body {
  font-size: 1.7rem;
  text-align: justify;
}
.footer {
  display: flex;
}

.modal-container .footer button {
  border-radius: 10px;
  border: none;
  color: var(--color-white);
  cursor: pointer;
  font-weight: 500;
  height: 5rem;
  margin: 0rem 1rem;
  text-align: center;
  text-transform: uppercase;
  width: 75%;
}
.modal-container .footer .safe {
  background-color: var(--color-neutral-gray);
}
.modal-container .footer .danger {
  background-color: var(--color-primary-red);
}

@media screen and (min-width: 1000px) {
  .modal-container {
    width: 50vw;
    height: fit-content;
    margin: 2rem;
  }
}

